--- a/src/gui/CustomListSelectionWindow.fxml
+++ b/src/gui/CustomListSelectionWindow.fxml
@@ -11,14 +11,12 @@
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.CustomListSelectionWindowController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="38.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="538.0" minWidth="10.0" prefWidth="526.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="35.0" />
+      <ColumnConstraints hgrow="SOMETIMES" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="127.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
+    <RowConstraints vgrow="SOMETIMES" />
     <RowConstraints maxHeight="228.0" minHeight="10.0" prefHeight="228.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <JFXButton fx:id="_exitButton" buttonType="RAISED" onAction="#handleExitClick" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
@@ -26,13 +24,16 @@
             <Insets left="10.0" top="10.0" />
          </GridPane.margin>
       </JFXButton>
-      <JFXListView fx:id="_listView" onMouseClicked="#handleListSelection" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <Label text="Your Lists" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+      <JFXListView fx:id="_listView" onMouseClicked="#handleListSelection" style="-fx-text-fill: black;" GridPane.rowIndex="1">
+         <GridPane.margin>
+            <Insets left="10.0" right="10.0" />
+         </GridPane.margin></JFXListView>
+      <Label text="Your Lists" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
          <font>
             <Font size="40.0" />
          </font>
       </Label>
-      <JFXButton fx:id="_playButton" buttonType="RAISED" onAction="#handlePlayClick" prefHeight="50.0" prefWidth="100.0" text="Play" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-      <Label fx:id="_warningLabel" alignment="CENTER" prefHeight="25.0" prefWidth="543.0" text="You currently have no custom lists. These can be created in the teachers tab." textFill="#b50303" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
+      <JFXButton fx:id="_playButton" buttonType="RAISED" onAction="#handlePlayClick" prefHeight="50.0" prefWidth="100.0" text="Play" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+      <Label fx:id="_warningLabel" alignment="CENTER" prefHeight="25.0" prefWidth="543.0" text="You currently have no custom lists. These can be created in the teachers tab." textFill="#b50303" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
    </children>
 </GridPane>
