--- a/src/gui/CustomListSelectionWindow.fxml
+++ b/src/gui/CustomListSelectionWindow.fxml
@@ -9,13 +9,13 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.CustomListSelectionWindowController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.CustomListSelectionWindowController">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="228.0" minHeight="10.0" prefHeight="228.0" vgrow="SOMETIMES" />
+    <RowConstraints vgrow="SOMETIMES" />
       <RowConstraints vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
@@ -24,16 +24,28 @@
             <Insets left="10.0" top="10.0" />
          </GridPane.margin>
       </JFXButton>
-      <JFXListView fx:id="_listView" onMouseClicked="#handleListSelection" style="-fx-text-fill: black;" GridPane.rowIndex="1">
+      <JFXListView fx:id="_listView" onMouseClicked="#handleListSelection" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
          <GridPane.margin>
             <Insets left="10.0" right="10.0" />
          </GridPane.margin></JFXListView>
-      <Label text="Your Lists" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+      <Label text="Your Lists" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="TOP">
          <font>
             <Font size="40.0" />
          </font>
+         <GridPane.margin>
+            <Insets top="20.0" />
+         </GridPane.margin>
       </Label>
-      <JFXButton fx:id="_playButton" buttonType="RAISED" onAction="#handlePlayClick" prefHeight="50.0" prefWidth="100.0" text="Play" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-      <Label fx:id="_warningLabel" alignment="CENTER" prefHeight="25.0" prefWidth="543.0" text="You currently have no custom lists. These can be created in the teachers tab." textFill="#b50303" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
+      <JFXButton fx:id="_playButton" buttonType="RAISED" minHeight="50.0" minWidth="100.0" onAction="#handlePlayClick" prefHeight="50.0" prefWidth="100.0" text="Play" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+         <GridPane.margin>
+            <Insets bottom="10.0" right="10.0" top="10.0" />
+         </GridPane.margin></JFXButton>
+      <Label fx:id="_warningLabel" alignment="CENTER" minWidth="543.0" prefHeight="25.0" prefWidth="543.0" text="You currently have no custom lists. These can be created in the teachers tab." textFill="#b50303" GridPane.halignment="CENTER" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets bottom="5.0" />
+         </GridPane.margin>
+         <padding>
+            <Insets top="70.0" />
+         </padding></Label>
    </children>
 </GridPane>
