--- a/src/gui/CustomListEditView.fxml
+++ b/src/gui/CustomListEditView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="423.0" prefWidth="556.0" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.CustomListEditViewController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#handleKeyPress" prefHeight="423.0" prefWidth="556.0" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.CustomListEditViewController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="176.0" minWidth="10.0" prefWidth="21.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="456.0" minWidth="10.0" prefWidth="456.0" />
@@ -35,6 +35,6 @@
          </font>
       </Label>
       <Label fx:id="_warningLabel" text="You currently have no custom lists." textFill="#bf0505" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
-      <JFXListView fx:id="_insideListView" onMouseClicked="#handleInnerListSelection" onMousePressed="#handleInnerListSelection" onMouseReleased="#handleInnerListSelection" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <JFXListView fx:id="_insideListView" onKeyPressed="#handleKeyPress" onMouseClicked="#handleInnerListSelection" onMousePressed="#handleInnerListSelection" onMouseReleased="#handleInnerListSelection" GridPane.columnIndex="1" GridPane.rowIndex="1" />
    </children>
 </GridPane>
