--- a/src/gui/LevelSelectConfirmationWindow.fxml
+++ b/src/gui/LevelSelectConfirmationWindow.fxml
@@ -52,7 +52,7 @@
                   <DropShadow blurType="ONE_PASS_BOX" />
                </effect>
             </Label>
-            <Label fx:id="_levelDescriptor" alignment="CENTER" contentDisplay="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS" wrapText="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+            <Label fx:id="_levelDescriptor" alignment="CENTER" contentDisplay="CENTER" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS" wrapText="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                <font>
                   <Font size="18.0" />
                </font>
