--- a/src/gui/UserWindow.fxml
+++ b/src/gui/UserWindow.fxml
@@ -80,11 +80,11 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ListView fx:id="_userList1" onMouseClicked="#handleListClick" prefHeight="314.0" prefWidth="400.0">
+            <ListView fx:id="_userList1" onKeyPressed="#handleKeyPress" onMouseClicked="#handleListClick" prefHeight="314.0" prefWidth="400.0">
                <GridPane.margin>
                   <Insets top="40.0" />
                </GridPane.margin></ListView>
-            <ListView fx:id="_userList2" onMouseClicked="#handleListClick" prefHeight="200.0" prefWidth="200.0" stylesheets="@TataiTheme.css" GridPane.columnIndex="1">
+            <ListView fx:id="_userList2" onKeyPressed="#handleKeyPress" onMouseClicked="#handleListClick" prefHeight="200.0" prefWidth="200.0" stylesheets="@TataiTheme.css" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets top="40.0" />
                </GridPane.margin></ListView>
