--- a/src/main/resources/view/fxml/LevelSelectWindow.fxml
+++ b/src/main/resources/view/fxml/LevelSelectWindow.fxml
@@ -5,6 +5,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -19,7 +20,7 @@
       <RowConstraints vgrow="ALWAYS" />
    </rowConstraints>
    <children>
-      <Label stylesheets="@../stylesheets/TataiTheme.css" text="Level Select" textFill="WHITE">
+      <Label onMouseEntered="#handleHover" stylesheets="@../stylesheets/TataiTheme.css" text="Level Select" textFill="WHITE">
          <font>
             <Font size="60.0" />
          </font>
@@ -30,7 +31,7 @@
             <Insets bottom="25.0" top="25.0" />
          </GridPane.margin>
       </Label>
-      <GridPane GridPane.rowIndex="1">
+      <GridPane onMouseEntered="#handleHover" GridPane.rowIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="448.0" />
         </columnConstraints>
@@ -41,13 +42,14 @@
           <RowConstraints maxHeight="129.0" minHeight="65.0" prefHeight="114.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXButton fx:id="_level1" buttonType="RAISED" onAction="#handleLevel1Click" prefHeight="50.0" prefWidth="100.0" text="Level 1" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-            <JFXButton fx:id="_level2" buttonType="RAISED" onAction="#handleLevel2Click" prefHeight="50.0" prefWidth="100.0" text="Level 2" textFill="#f8f8f8" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-            <JFXButton fx:id="_practice" buttonType="RAISED" onAction="#handlePracticeClick" prefHeight="50.0" prefWidth="100.0" text="Practice" textFill="#f8f8f8" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <JFXButton fx:id="_customList" buttonType="RAISED" onAction="#handleCustomListClick" prefHeight="50.0" prefWidth="100.0" text="Custom List" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_level1" buttonType="RAISED" onAction="#handleLevel1Click" onMouseEntered="#handleHover" prefHeight="50.0" prefWidth="100.0" text="Level 1" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_practice" buttonType="RAISED" onAction="#handlePracticeClick" onMouseEntered="#handleHover" prefHeight="50.0" prefWidth="100.0" text="Practice" textFill="#f8f8f8" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_customList" buttonType="RAISED" onAction="#handleCustomListClick" onMouseEntered="#handleHover" prefHeight="50.0" prefWidth="100.0" text="Custom List" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+            <AnchorPane fx:id="_level2Wrap" maxHeight="50.0" maxWidth="100.0" minHeight="50.0" minWidth="100.0" onMouseEntered="#handleHover" prefHeight="50.0" prefWidth="100.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_level2" buttonType="RAISED" onAction="#handleLevel2Click" onMouseEntered="#handleHover" prefHeight="50.0" prefWidth="100.0" text="Level 2" textFill="#f8f8f8" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
          </children>
       </GridPane>
-      <FontAwesomeIconView fx:id="_menuButton" glyphName="ARROW_LEFT" onMouseClicked="#handleMenuButtonClick" onMousePressed="#handleMenuButtonClick" onMouseReleased="#handleMenuButtonClick" size="35" styleClass="icon-standard-clickable" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+      <FontAwesomeIconView fx:id="_menuButton" glyphName="ARROW_LEFT" onMouseClicked="#handleMenuButtonClick" onMouseEntered="#handleHover" onMousePressed="#handleMenuButtonClick" onMouseReleased="#handleMenuButtonClick" size="35" styleClass="icon-standard-clickable" GridPane.halignment="LEFT" GridPane.valignment="TOP">
          <effect>
             <DropShadow blurType="ONE_PASS_BOX" />
          </effect>
